contrast fix

--- a/css/style.css
+++ b/css/style.css
@@ -614,7 +614,7 @@ hr {
 
 .cta-sc2:hover {
   /* shopping cart hover */
-  background-color: #226528;
+  background-color: #60b867;
 }
 
 .cta-sc1,
@@ -625,7 +625,7 @@ hr {
 }
 
 .cta-sc2 {
-  background-color: #409A49;
+  background-color: #306435;
 }
 
 .cta-o {
